style.css
body {
  font-family: "Open Sans", sans-serif;
  font-size: 16px;
  line-height: 1;
}

textarea {
  background: transparent;
  border: none;
  resize: none;
  color: #000000;
  padding: 10px;
  width: 95%;
}

.jumbotron {
  text-align: center;
  background-color: transparent;
  color: black;
  border-radius: 0;
  border-bottom: 10px solid black;
}

.description {
  white-space: pre-wrap;
}

.time-block {
  text-align: center;
  justify-content: center;
  border-radius: 15px;
  border: 1px solid black;
  display: flex;
}

.row {
  white-space: pre-wrap;
  height: 80px;
}

.hour {
  background-color:white;
  color: #000000;
  border: 1px solid black;
  border-radius: 15px;
  padding: 10px;
  text-align: right;
}

.past {
  background-color: #d3d3d3;
  color: white;
}

.present {
  background-color: #ff6961;
  color: white;
}

.future {
  background-color: #77dd77;
  color: white;
}

.saveBtn {
  border: 1px solid black;
  background-color: #06aed5;
  color: white;
  text-align: center;
  padding: 30px;
  border-radius: 15px;
}

.saveBtn i:hover {
  font-size: 20px;
  transition: all 0.3s ease-in-out;
}

.currentDate {
  color: black;
}

